--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,18 @@
+@import url(https://fonts.googleapis.com/earlyaccess/droidarabickufi.css);
+
+body {
+  background-image: linear-gradient(to bottom, rgba(21, 2, 2, 0.98), rgba(171, 120, 106, 0.89), rgba(21, 2, 2, 0.98)), url(./background.jpg);
+  background-repeat: repeat;
+  background-size:25%;
+  background-attachment:fixed;
+  background-position: center;
+  font-family: 'Droid Arabic Kufi', serif;
+}
+
+
 .App {
   text-align: center;
+
 }
 
 .App-logo {
@@ -32,6 +45,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
