--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,11 @@
 @import url(https://fonts.googleapis.com/earlyaccess/droidarabickufi.css);
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 
 
 body {
@@ -11,6 +17,8 @@ body {
   background-position: center;
   font-family: 'Droid Arabic Kufi', serif;
 }
+
+
 
 img {
   image-rendering: pixelated;
